--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "dependencies": {
-    "font-awesome": "^4.7.0",
-    "purecss": "^1.0.0",
-    "rellax": "^1.6.0",
+  "devDependencies": {
     "surge": "^0.20.1"
+  },
+  "dependencies": {
+    "purecss": "^1.0.0",
+    "rellax": "^1.6.0"
   }
 }
