--- a/_data/style.yml
+++ b/_data/style.yml
@@ -1,3 +1,12 @@
 -
-  name: orange
+  name: medium-orange
+  value: '#ff7512'
+-
+  name: dark-orange
   value: '#ff5900'
+-
+  name: light-blue
+  value: '#83a8f0'
+-
+  name: dark-blue
+  value: '#155de9'
