--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "surge": "^0.20.1"
   },
   "dependencies": {
+    "photoswipe": "^4.1.2",
     "purecss": "^1.0.0",
     "rellax": "^1.6.0"
   }
