--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lg-thumbnail.js": "^1.0.0",
     "lightgallery.js": "^1.0.2",
     "purecss": "^1.0.0",
-    "rellax": "^1.6.0"
+    "rellax": "^1.6.0",
+    "stateless-maybe-js": "^1.1.0"
   }
 }
