--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,7 @@
 .sass-cache
 .bundle
 
-assets/stateless-maybe-js
-assets/lightgallery.js
-assets/lg-thumbnail.js
-assets/purecss
-assets/rellax
+node-assets
 
 yarn-error.log
 Gemfile.lock
