--- a/_data/style.yml
+++ b/_data/style.yml
@@ -1,3 +1,10 @@
+# Text colors
+-
+  name: dark-gray
+  value: '#414141'
+-
+  name: light-gray
+  value: '#aaa'
 -
   name: medium-orange
   value: '#ff7512'
@@ -10,3 +17,19 @@
 -
   name: dark-blue
   value: '#155de9'
+
+# Background colors
+-
+  name: bg-light-gray
+  value: '#fafafa'
+
+# Margins
+-
+  name: light-margin
+  value: 20px
+-
+  name: medium-margin
+  value: 40px
+-
+  name: heavy-margin
+  value: 80px
