--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "devDependencies": {
-    "surge": "^0.20.1"
-  },
   "dependencies": {
     "lg-thumbnail.js": "^1.0.0",
     "lightgallery.js": "^1.0.2",
     "purecss": "^1.0.0",
     "rellax": "^1.6.0",
     "stateless-maybe-js": "^1.1.0"
+  },
+  "devDependencies": {
+    "copy-dir": "^0.3.0",
+    "surge": "^0.20.1"
   }
 }
