--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: HearWeArt
-email: your-email@example.com
+email: info@hearweart.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: '' # the subpath of your site, e.g. /blog
-url: '' # the base hostname & protocol for your site, e.g. http://example.com
+  Hear We Art is a project specifically designed for the hearing and visually impaired,
+  including children from 4 to 18 years old.
+  Our aim is to enrich children skills and abilities in practical art making.
+baseurl: '/' # the subpath of your site, e.g. /blog
+url: 'http://hearweart.org' # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
@@ -30,7 +30,8 @@ sass:
   sass_dir: assets/css
   style: compressed
 
-# Exclude from processing.
+include: [_pages]
+
 exclude:
   - Makefile
   - Gemfile
