--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 -
-  fa_class: fab fa-facebook-f
+  class: fab fa-facebook-f
   link: https://www.facebook.com/hearweart
 -
-  fa_class: fas fa-envelope
+  class: fas fa-envelope
   link: mailto:<email>
