--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "chart.js": "^2.7.2",
     "lightgallery.js": "^1.0.2",
     "purecss": "^1.0.0",
     "rellax": "^1.6.0",
