--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "stateless-maybe-js": "^2.2.2"
   },
   "devDependencies": {
-    "copy-dir": "^0.4.0"
+    "copy-dir": "^0.4.0",
+    "netlify-cli": "^2.8.3"
   }
 }
