--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -14,17 +14,17 @@
   name: Projects
   childs:
     -
-      name: 2017 pilot program
+      name: 2017 Pilot Program
       route: 2017-pilot-program
     -
-      name: 2017 gallery
+      name: 2017 Gallery
       route: 2017-gallery
     -
-      name: 2018 workshops
+      name: 2018 Workshops
       route: 2018-workshops
     -
-      name: 2019
-      route: 2019
+      name: 2019 Workshops
+      route: 2019-workshops
 -
   name: Partners
   childs:
